--- a/paisajes.html
+++ b/paisajes.html
@@ -25,20 +25,25 @@
       </div>
     </header>
 
-    <section id="container2">
+    <section id="boxes1">
       <div class="container">
-        <img src="./img/camaraP.jpg" title="C&aacute;mara" class="camara">
-      </div>
-    </section>
-    <section id="boxes">
-      <div class="container">
-        <div class="box">
-          <img id="imagen1" src="./img/paisaje.jpg">
-          <h1><a href="paisajes.html">Paisaje</a></h1>
+        <div class="box1">
+          <img id="p1" src="./img/p1.jpg">
         </div>
-        <div class="box">
-          <img id="imagen2" src="./img/modelo.jpg">
-          <h3><a href="retratos.html">Retratos</a></h3>
+        <div class="box1">
+          <img id="p2" src="./img/p1.jpg">
+        </div>
+        <div class="box1">
+          <img id="p3" src="./img/p1.jpg">
+        </div>
+        <div class="box1">
+          <img id="p4" src="./img/p1.jpg">
+        </div>
+        <div class="box1">
+          <img id="p5" src="./img/p1.jpg">
+        </div>
+        <div class="box1">
+          <img id="p6" src="./img/p1.jpg">
         </div>
       </div>
     </section>
